# ProMedia

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  Untitled  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  RtmpUpdate.cpp  RtmpUpdate.h  WlAudio.cpp  WlAudio.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlPlaystatus.cpp  WlPlaystatus.h  WlQueue.cpp  WlQueue.h  WlVideo.cpp  WlVideo.h  native-lib.cpp
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/java/com/simpo/promusic/: MainActivity.java
app/src/main/java/com/simpo/promusic/music/bean/: MuteEnum.java  WlTimeInfoBean.java
app/src/main/java/com/simpo/promusic/music/listener/: WlOnCompleteListener.java  WlOnErrorListener.java  WlOnLoadListener.java  WlOnPauseResumeListener.java  WlOnPreparedListener.java  WlOnTimeInfoListener.java  WlOnValumeDBListener.java
app/src/main/java/com/simpo/promusic/music/log/: MyLog.java
app/src/main/java/com/simpo/promusic/music/player/: MusicPlayer.java
app/src/main/java/com/simpo/promusic/music/threadXUtil/: AbstractLife.java  ThreadX.java  ThreadXFactory.java  ThreadXSingle.java
app/src/main/java/com/simpo/promusic/opengl/: WlGLSurfaceView.java  WlRender.java  WlShaderUtil.java
app/src/main/java/com/simpo/promusic/player/: MusicPlayer.java
app/src/main/java/com/simpo/promusic/player/bean/: MuteEnum.java  WlTimeInfoBean.java
app/src/main/java/com/simpo/promusic/player/listener/: WlOnCompleteListener.java  WlOnErrorListener.java  WlOnLoadListener.java  WlOnLogListener.java  WlOnPauseResumeListener.java  WlOnPreparedListener.java  WlOnTimeInfoListener.java  WlOnValumeDBListener.java
app/src/main/java/com/simpo/promusic/player/log/: MyLog.java
app/src/main/java/com/simpo/promusic/player/threadXUtil/: AbstractLife.java  ThreadX.java  ThreadXFactory.java  ThreadXSingle.java
app/src/main/java/com/simpo/promusic/utils/: FileUtil.java  PermissionsUtils.java  WlTimeUtil.java  WlVideoSupportUitl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/simpo/promusic/: ExampleUnitTest.java
audioplayer/: CMakeLists.txt  build.gradle
audioplayer/src/androidTest/java/media/share/audioplayer/: ExampleInstrumentedTest.java
audioplayer/src/main/: AndroidManifest.xml
audioplayer/src/main/cpp/: AndroidLog.h  Audio-lib.cpp  AudioCallJava.cpp  AudioCallJava.h  AudioPlayState.cpp  AudioPlayState.h  AudioQueue.cpp  AudioQueue.h  FFmpegPlay.cpp  FFmpegPlay.h  OpenSLESPlay.cpp  OpenSLESPlay.h
audioplayer/src/main/java/media/share/audioplayer/: AudioEngine.java  AudioPlayer.java  DemoActivity.java
audioplayer/src/main/java/media/share/audioplayer/bean/: MuteEnum.java  PlayTime.java
audioplayer/src/main/java/media/share/audioplayer/code/: AudioMessage.java  PlayState.java
audioplayer/src/main/java/media/share/audioplayer/listener/: OnPlayerErrorListener.java  OnPlayerInfoListener.java  OnPlayerProgressListener.java  OnPlayerStateListener.java  OnPlayerVolumeDBListener.java
audioplayer/src/main/java/media/share/audioplayer/utils/: PermissionsUtils.java  TimeFormat.java
audioplayer/src/main/res/layout/: activity_demo.xml
audioplayer/src/test/java/media/share/audioplayer/: ExampleUnitTest.java
audiorecoder/: README.md  build.gradle
audiorecoder/src/androidTest/java/media/share/audiorecoder/: ExampleInstrumentedTest.java
audiorecoder/src/main/: AndroidManifest.xml
audiorecoder/src/main/java/media/share/audiorecoder/: AudioRecorder.java  DemoActivity.java  MainActivity.java  PcmCovWavUtil.java  PcmToWavUtil.java  PermissionsUtils.java  WaveHeader.java
audiorecoder/src/main/res/layout/: activity_demo.xml  activity_main.xml
audiorecoder/src/main/res/values/: colors.xml  strings.xml  themes.xml
audiorecoder/src/main/res/values-night/: themes.xml
audiorecoder/src/test/java/media/share/audiorecoder/: ExampleUnitTest.java
baselibrary/: build.gradle
baselibrary/src/androidTest/java/media/share/baselibrary/: ExampleInstrumentedTest.java
baselibrary/src/main/: AndroidManifest.xml
baselibrary/src/main/java/media/share/baselibrary/: PermissionsUtils.java
baselibrary/src/test/java/media/share/baselibrary/: ExampleUnitTest.java
commondialog/: build.gradle
commondialog/src/main/: AndroidManifest.xml
commondialog/src/main/java/com/simple/commondialog/: CommonDialog.java  DialogConfig.java  DialogUtils.java  ProgressLoading.java
commondialog/src/main/res/anim/: center_in.xml  center_out.xml  down_to_up.xml  up_to_down.xml
commondialog/src/main/res/drawable/: progress_dialog_anim.xml
commondialog/src/main/res/layout/: progress_dialog.xml
commondialog/src/main/res/values/: styles.xml
commondialog/src/test/java/com/simple/commondialog/: ExampleUnitTest.java
filmfactory/: build.gradle  readme.txt  wait_todo.txt
filmfactory/src/main/: AndroidManifest.xml
filmfactory/src/main/res/drawable/: bg_stroke_blue.xml  camera_show_video.xml  camera_take_photo.xml  camera_take_video.xml  chose_not.xml  chose_yes.xml  ic_chevron_left_white.xml  select_bg.xml  size_chose_not.xml  size_chose_yes.xml  solid_blue.xml  stroke_blue.xml  unselect_bg.xml  white_role.xml
filmfactory/src/main/res/layout/: activity_audio_factory.xml  activity_audio_file_list.xml  activity_camera.xml  activity_camera_setting.xml  activity_camera_size.xml  activity_file_management.xml  activity_main.xml  activity_video_factory.xml  activity_video_file_list.xml  base_include_head.xml  dialog_delete_all.xml  dialog_media_info.xml  item_camera_size.xml  item_file.xml
filmfactory/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
livepusher/: build.gradle
livepusher/src/main/: AndroidManifest.xml
livepusher/src/main/cpp/: native-lib.cpp
livepusher/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_video.xml
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/res/layout/: activity_egl.xml  activity_main.xml  activity_texture.xml
(+121 files in other folders)
